volledige website met samengevoegdecode

--- a/onderwerpenTwee.html
+++ b/onderwerpenTwee.html
@@ -30,6 +30,22 @@
         <div class="cloud"></div>
       </div>
     </div>
+    <header>
+      <nav>
+          <div class="left-nav">
+              <a href="./onderwerpenEen.html">
+                  <img src="./assets/angle-left-solid 1.png" alt="back button">
+                  <p>Ga terug</p>
+              </a>
+          </div>
+          <div class="right-nav">
+              <a href="./index.html">
+                  <p>Terug naar begin</p>
+                  <img src="./assets/return.png" alt="return home button">
+              </a>
+          </div>
+      </nav>
+    </header>
 <section>
   <div class="onderwerpen">
     <h1 class="onderwerpen_titel">Laat je kind hier een onderwerp kiezen</h1>
@@ -39,7 +55,7 @@
       <p>Gekke verhalen</p>
     </div>
     <div class="onderwerpen_box">
-      <a><img src="assets/sprookjes.png" alt="sprookjes"></a>      
+      <a href="boeken.html"><img src="assets/sprookjes.png" alt="sprookjes"></a>      
       <p>Sprookjes</p>
     </div>
     <div class="onderwerpen_box">
@@ -48,13 +64,6 @@
     </div>
   </div>
 </section>
-<div class="back">
-  <a href="index.html">Terug naar beginscherm</a>
-  <img src="assets/terug.png" alt="pijltje terug">
-</div>
-<div class="vorige">
-  <img src="assets/vorige.png" alt="vorige pagina">
-  <a href="onderwerpenEen.html">Ga terug</a>
-</div>
+
   </body>
 </html>
