--- a/laatsteScherm.html
+++ b/laatsteScherm.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="master.css" />
-
     <title>Document</title>
   </head>
   <body>
@@ -33,6 +32,12 @@
     </div>
     <header>
       <nav>
+          <div class="left-nav">
+              <a href="./boeken.html">
+                  <img src="./assets/angle-left-solid 1.png" alt="back button">
+                  <p>Ga terug</p>
+              </a>
+          </div>
           <div class="right-nav">
               <a href="./index.html">
                   <p>Terug naar begin</p>
@@ -40,25 +45,15 @@
               </a>
           </div>
       </nav>
-  </header>
-<section>    
-  <div class="onderwerpen">
-    <h1 class="onderwerpen_titel">Laat je kind hier een onderwerp kiezen</h1>
+    </header>
+      <section class="onderwerpen">
+        <div class="laatstepagina_alignment">
+          <div class="titelbox"><h1 class="laatstepagina_titel">Je hebt gekozen voor “De avonturen van Rutger Thomas & Paco”</h1></div>
+            <div class="kast"><img src="./assets/kastbib.png" alt="kast"></div>
+        <div class="knopbox"> <a href="index.html"><button class="knopstart">Start</button></a></div>
+        </div>
+      </section>    
 
-    <div class="onderwerpen_box">
-      <a href="onderwerpenTwee.html"><img src="assets/avontuur.png" alt="avontuur"></a>
-      <p>Avontuur</p>
-    </div>
-    <div class="onderwerpen_box">
-      <a><img src="assets/famillie.png" alt="familie"></a>      
-      <p>Familie</p>
-    </div>
-    <div class="onderwerpen_box">
-      <a><img src="assets/grappig.png" alt="grappig"></a>      
-      <p>Grappig</p>
-    </div>
-  </div>
-</section>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
